--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">A2DP Volume Manager</string>
-    
+
     <string name="dialog_title_speakervolume_pref">Speaker volume</string>
     <string name="dialog_msg_speakervolume_pref">Speaker media volume</string>
     <string name="title_speakervolume_pref">Speaker volume</string>
     <string name="summary_speakervolume_pref">
-        Set media volume for the external speaker</string>
+        Set media volume for the external speaker
+    </string>
     <string name="dialog_title_wiredvolume_pref">Wired headset volume</string>
     <string name="dialog_msg_wiredvolume_pref">Wired headset media volume</string>
     <string name="title_wiredvolume_pref">Wired headset volume</string>
     <string name="summary_wiredvolume_pref">
-        Set media volume when using a wired headset</string>
+        Set media volume when using a wired headset
+    </string>
     <string name="dialog_title_a2dpvolume_pref">Bluetooth A2DP volume</string>
     <string name="dialog_msg_a2dpvolume_pref">Bluetooth A2DP media volume</string>
     <string name="title_a2dpvolume_pref">Bluetooth A2DP volume</string>
     <string name="summary_a2dpvolume_pref">
-        Set media volume for use with Bluetooth A2DP output</string>
+        Set media volume for use with Bluetooth A2DP
+        output
+    </string>
+    <string name="key_show_ui_flag">show_ui_flag</string>
+    <string name="title_show_ui_flag">Show volume window</string>
+    <string name="summary_show_ui_flag">
+        Display volume status when switching outputs</string>
 </resources>
